# angela

./: CMakeLists.txt  README.md  main.cpp
include/angela/: Checksum.hpp  Merkle.hpp
src/: Merkle.cpp
